added local storage for input values

--- a/index.html
+++ b/index.html
@@ -24,49 +24,58 @@
   </header>
 
   <main class="container" id="list-group">
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">9AM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour1">9AM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">10AM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour2">10AM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">11AM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour3">11AM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">12PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour4">12PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">1PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour5">1PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">2PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour6">2PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">3PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour7">3PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">4PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour8">4PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
-    <div class="row">
-      <div class="col-1 d-flex align-items-center">5PM</div>
-      <textarea class="col-10 d-flex align-items-center"></textarea>
+
+    <div class="row time-block">
+      <div class="hour col-1 d-flex align-items-center" id="hour9">5PM</div>
+      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
   </main>
