able to display values saved from localstorage

--- a/index.html
+++ b/index.html
@@ -25,57 +25,57 @@
 
   <main class="container" id="list-group">
 
-    <div class="row time-block">
+    <div class="row" id="time-block1">
       <div class="hour col-1 d-flex align-items-center" id="hour1">9AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text1"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block2">
       <div class="hour col-1 d-flex align-items-center" id="hour2">10AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text2"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block3">
       <div class="hour col-1 d-flex align-items-center" id="hour3">11AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text3"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block4">
       <div class="hour col-1 d-flex align-items-center" id="hour4">12PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text4"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block5">
       <div class="hour col-1 d-flex align-items-center" id="hour5">1PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text5"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block6">
       <div class="hour col-1 d-flex align-items-center" id="hour6">2PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text6"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block7">
       <div class="hour col-1 d-flex align-items-center" id="hour7">3PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text7"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block8">
       <div class="hour col-1 d-flex align-items-center" id="hour8">4PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text8"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
 
-    <div class="row time-block">
+    <div class="row" id="time-block9">
       <div class="hour col-1 d-flex align-items-center" id="hour9">5PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center"></textarea>
+      <textarea class="textinput col-10 d-flex align-items-center" id="text9"></textarea>
       <button type="button" class="save-btn col-1 rounded" id="">Save</button>
     </div>
   </main>
