added eventscheduler for colors on current events and css

--- a/index.html
+++ b/index.html
@@ -14,69 +14,66 @@
 </head>
 
 <body>
-  <header class="jumbotron ">
+  <header class="jumbotron">
     <h1 class="display-3">Work Day Scheduler</h1>
     <p class="lead">A simple calendar app for scheduling your work day</p>
     <p id="currentDay" class="lead"></p>
-    <div class="container">
-      <h2 id="texas-time"></h2>
-    </div>
   </header>
 
   <main class="container" id="list-group">
 
     <div class="row" id="time-block1">
-      <div class="hour col-1 d-flex align-items-center" id="hour1">9AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text1"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour1">9AM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="9"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block2">
-      <div class="hour col-1 d-flex align-items-center" id="hour2">10AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text2"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour2">10AM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="10"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block3">
-      <div class="hour col-1 d-flex align-items-center" id="hour3">11AM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text3"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour3">11AM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="11"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block4">
-      <div class="hour col-1 d-flex align-items-center" id="hour4">12PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text4"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour4">12PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="12"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block5">
-      <div class="hour col-1 d-flex align-items-center" id="hour5">1PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text5"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour5">1PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="13"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block6">
-      <div class="hour col-1 d-flex align-items-center" id="hour6">2PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text6"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour6">2PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="14"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block7">
-      <div class="hour col-1 d-flex align-items-center" id="hour7">3PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text7"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour7">3PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="15"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block8">
-      <div class="hour col-1 d-flex align-items-center" id="hour8">4PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text8"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour8">4PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="16"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
 
     <div class="row" id="time-block9">
-      <div class="hour col-1 d-flex align-items-center" id="hour9">5PM</div>
-      <textarea class="textinput col-10 d-flex align-items-center" id="text9"></textarea>
-      <button type="button" class="save-btn col-1 rounded" id="">Save</button>
+      <div class="hour col-md-1 col-12 d-flex align-items-center justify-content-center" id="hour9">5PM</div>
+      <textarea class="textinput col-md-10 col-12 d-flex align-items-center" id="17"></textarea>
+      <button type="button" class="save-btn col-md-1 col-12 rounded btn-info" id="">Save</button>
     </div>
   </main>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
